--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:startColor="#FFFFFF"
-        android:endColor="#CBD5D4"
+        android:startColor="#CBD5D4"
+        android:endColor="#FFFFFF"
         android:type="linear"/>
 </shape>
