--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:id="@+id/login_FLIP_flipper"
         >
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +81,7 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="0.25"
+                android:layout_weight="0.2"
                 android:layout_gravity="center_horizontal"
                 android:ems="6"
                 android:layout_marginTop="20dp"
@@ -91,18 +92,17 @@
                 android:layout_marginEnd="30dp"
                 android:layout_marginStart="30dp"
                 android:gravity="center"
-                android:visibility="gone"
                 android:autofillHints="0"
                 />
 
 
         </LinearLayout>
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:weightSum="1"
             >
 
 
@@ -121,7 +121,7 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="0.2"
+                android:layout_weight="0.1"
                 android:ems="10"
                 android:layout_marginTop="20dp"
                 android:autoSizeTextType="uniform"
@@ -132,10 +132,10 @@
                 android:layout_marginStart="30dp"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:visibility="gone"
                 android:autofillHints="0"
                 />
         </LinearLayout>
+
 
 
     </ViewFlipper>
@@ -174,4 +174,4 @@
         />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
