--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -142,26 +142,45 @@
 
 
 
-
-
-
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center|bottom"
         android:layout_marginBottom="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.15"
-        app:layout_constraintDimensionRatio="1.5:1"
-        android:layout_marginTop="20dp"
-        android:text="@string/next"
-        android:autoSizeTextType="uniform"
-        android:padding="20dp"
-        android:elevation="-10dp"
-        android:id="@+id/login_BTN_next"
-        android:translationZ="-10dp"
-        />
+        >
+
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="140dp"
+            android:layout_height="match_parent"
+            android:text="@string/back"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMinTextSize="12sp"
+            android:autoSizeMaxTextSize="40sp"
+            android:padding="15dp"
+            android:id="@+id/login_BTN_back"
+            android:translationZ="-10dp"
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"
+            />
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="140dp"
+            android:layout_height="match_parent"
+            android:text="@string/next"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMinTextSize="12sp"
+            android:autoSizeMaxTextSize="40sp"
+            android:padding="15dp"
+            android:id="@+id/login_BTN_next"
+            android:translationZ="-10dp"
+            android:layout_marginStart="10dp"
+            />
+
+
+    </LinearLayout>
+
 
 
 
