--- a/app/src/main/res/layout/recycler_photo_item.xml
+++ b/app/src/main/res/layout/recycler_photo_item.xml
@@ -20,11 +20,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/photo_item_IMG_background"
-            android:src="@drawable/ic_loading"
             android:background="@android:color/black"
-            android:padding="15dp"
-            android:contentDescription="@string/loading"
+            android:contentDescription="@string/photo"
             />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="25dp"
+            android:src="@drawable/ic_loading"
+            android:contentDescription="@string/loading"
+            android:id="@+id/photo_item_IMG_loading"
+            />
+
+
+
 
         <ImageView
             android:layout_width="match_parent"
