--- a/app/src/main/res/layout/fragment_points_status.xml
+++ b/app/src/main/res/layout/fragment_points_status.xml
@@ -1,54 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="40dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
+    android:gravity="center_vertical"
     tools:context=".fragment.PointsStatusFragment">
 
     <ImageView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.3"
-        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_points_wheel"
         android:id="@+id/points_status_IMG_points_logo"
         android:contentDescription="@string/points"
         />
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintWidth_percent="0.3"
-        android:layout_marginStart="3dp"
-        app:layout_constraintStart_toEndOf="@id/points_status_IMG_points_logo"
+        android:layout_width="60dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="5dp"
         android:gravity="center|start"
         android:autoSizeMaxTextSize="40sp"
-        android:autoSizeMinTextSize="20sp"
+        android:autoSizeMinTextSize="12sp"
         android:padding="3dp"
         android:text="@string/number_00"
+        android:lines="1"
         android:autoSizeTextType="uniform"
-        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/points_status_LBL_points_count"
         />
 
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         app:layout_constraintStart_toEndOf="@id/points_status_LBL_points_count"
-        app:layout_constraintTop_toTopOf="@id/points_status_IMG_points_logo"
-        app:layout_constraintBottom_toBottomOf="@id/points_status_IMG_points_logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/plus_sign"
         android:autoSizeTextType="uniform"
-        android:layout_marginStart="5dp"
+        app:cornerRadius="20dp"
         android:id="@+id/points_status_BTN_add"
         />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
