--- a/app/src/main/res/layout/recycler_event_item.xml
+++ b/app/src/main/res/layout/recycler_event_item.xml
@@ -10,6 +10,8 @@
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="1:0.375"
         app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="5dp"
+        android:id="@+id/event_item_LAY_card"
         >
 
         <LinearLayout
