--- a/app/src/main/res/layout/activity_photo_inspect.xml
+++ b/app/src/main/res/layout/activity_photo_inspect.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:name="com.idan_koren_israeli.sailtracker.fragment.LoadingFragment"
+        app:show_app_icon="false"
         tools:layout="@layout/fragment_loading"
         android:id="@+id/photo_inspect_FRAG_loading"
         />
@@ -31,6 +32,7 @@
         android:id="@+id/photo_inspect_FAB_back"
         android:src="@drawable/ic_baseline_arrow_back_24"
         android:layout_margin="40dp"
+        app:fabCustomSize="50dp"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -41,6 +43,8 @@
         android:src="@drawable/ic_baseline_delete_24"
         android:layout_alignParentEnd="true"
         android:layout_margin="40dp"
+        app:fabCustomSize="50dp"
+        android:translationZ="-10dp"
         />
 
 
