--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,22 +11,42 @@
     android:alpha="0.9"
     android:weightSum="1">
 
-    <com.idan_koren_israeli.sailtracker.custom_views.SquareImageView
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="0.2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintWidth_percent="0.5"
         android:src="@drawable/ic_loading"
-        android:layout_gravity="center"
         android:contentDescription="@string/loading"
-        android:id="@+id/loading_IMG_image"
+        android:id="@+id/loading_IMG_spinner"
         android:padding="5dp"
-        android:alpha="0.9"/>
+        android:alpha="0.8"/>
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintWidth_percent="0.25"
+        android:src="@drawable/ic_sailing_boat_white"
+        android:padding="5dp"
+        android:id="@+id/loading_IMG_app_icon"
+        android:contentDescription="@string/loading"
+        android:alpha="0.8"/>
+
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:layout_gravity="center"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintTop_toBottomOf="@id/loading_IMG_spinner"
         android:text="@string/loading"
         android:gravity="center"
         android:autoSizeMinTextSize="8sp"
@@ -38,4 +58,4 @@
         android:alpha="0.9"
         />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
