--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,6 +9,7 @@
 
     <declare-styleable name="LoadingFragment">
         <attr name="show_message" format="boolean"/>
+        <attr name="show_app_icon" format="boolean"/>
         <attr name="starts_hidden" format="boolean"/>
         <attr name="message" format="string"/>
     </declare-styleable>
