--- a/app/src/main/res/layout/recycler_registrable_event_item.xml
+++ b/app/src/main/res/layout/recycler_registrable_event_item.xml
@@ -13,98 +13,186 @@
         app:cardCornerRadius="1dp"
         app:cardUseCompatPadding="true"
         android:animateLayoutChanges="true"
+        android:id="@+id/event_item_LAY_outer_card"
+
         >
 
-        <Button
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="end|top"
-            android:background="@drawable/ic_delete"
-            android:id="@+id/register_event_item_BTN_delete"
-            app:backgroundTint="@android:color/black"
-            />
-
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:weightSum="1"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            android:baselineAligned="false"
             android:animateLayoutChanges="true"
-            android:id="@+id/event_item_LAY_outer_info"
             >
 
-            <RelativeLayout
-                android:layout_width="0dp"
+            <Button
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="15dp"
+                android:background="@drawable/ic_delete"
+                android:id="@+id/register_event_item_BTN_delete"
+                app:backgroundTint="@android:color/black"
+                />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="1"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toTopOf="parent"
+                android:baselineAligned="false"
+                android:id="@+id/event_item_LAY_outer_info"
+                >
+
+
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.55"
+                    android:animateLayoutChanges="true"
+                    android:padding="10dp"
+                    >
+
+
+                    <TextView
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:textSize="24sp"
+                        android:text="@string/example_event_name"
+                        android:lines="1"
+                        android:autoSizeMinTextSize="16sp"
+                        android:autoSizeMaxTextSize="28sp"
+                        android:autoSizeTextType="uniform"
+                        android:padding="5dp"
+                        android:includeFontPadding="false"
+                        android:gravity="start|center"
+                        android:id="@+id/event_item_LBL_name"
+                        />
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:text="@string/example_hour_range"
+                        android:lines="1"
+                        android:layout_below="@id/event_item_LBL_name"
+                        android:autoSizeMinTextSize="18sp"
+                        android:autoSizeMaxTextSize="30sp"
+                        android:autoSizeTextType="uniform"
+                        android:paddingEnd="25dp"
+                        android:paddingStart="4dp"
+                        android:gravity="start"
+                        android:id="@+id/event_item_LBL_time_of_day"
+                        />
+
+
+
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/event_item_LBL_time_of_day"
+                        android:text="@string/event_card_more_info"
+                        android:autoSizeMinTextSize="12sp"
+                        android:autoSizeTextType="uniform"
+                        android:autoSizeMaxTextSize="14sp"
+                        android:layout_marginTop="25dp"
+                        app:iconPadding="0dp"
+                        android:gravity="start|bottom"
+                        android:lines="1"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/event_item_BTN_toggle_info"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:visibility="visible"
+                        />
+
+
+
+                </RelativeLayout>
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.45"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/event_item_LAY_image_and_button"
+                    >
+
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_margin="5dp"
+                        android:layout_height="0dp"
+                        android:contentDescription="@string/sails"
+                        app:layout_constraintDimensionRatio="1:1"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:id="@+id/event_item_IMG_image"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_baseline_add_24"
+                        />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        app:layout_constraintTop_toBottomOf="@id/event_item_IMG_image"
+                        app:icon="@drawable/ic_points_wheel"
+                        app:iconSize="23dp"
+                        app:iconGravity="start"
+                        android:lines="1"
+                        android:id="@+id/event_item_BTN_register"
+                        android:textSize="12sp"
+                        android:autoSizeMaxTextSize="14sp"
+                        android:autoSizeMinTextSize="10sp"
+                        android:autoSizeTextType="uniform"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        app:cornerRadius="20dp"
+                        app:iconTintMode="multiply"
+                        app:iconTint="@android:color/white"
+                        android:text="@string/number_00"
+
+                        />
+
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.65"
+                app:layout_constraintTop_toBottomOf="@id/event_item_LAY_outer_info"
+                android:id="@+id/event_item_LAY_more_info"
+                android:visibility="gone"
+                android:orientation="vertical"
                 android:animateLayoutChanges="true"
+                android:paddingBottom="16dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 >
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="26sp"
-                    android:text="@string/example_event_name"
-                    android:lines="1"
-                    android:autoSizeMinTextSize="20sp"
-                    android:autoSizeMaxTextSize="38sp"
-                    android:autoSizeTextType="uniform"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="2dp"
-                    android:includeFontPadding="false"
-                    android:gravity="start|center"
-                    android:id="@+id/event_item_LBL_name"
-                    />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/event_item_LBL_name"
-                    android:textSize="18sp"
-                    android:text="@string/example_hour_range"
-                    android:lines="1"
-                    android:autoSizeMinTextSize="18sp"
-                    android:autoSizeMaxTextSize="30sp"
-                    android:autoSizeTextType="uniform"
-                    android:padding="4dp"
-                    android:paddingEnd="25dp"
-                    android:paddingStart="4dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="15dp"
-                    android:gravity="start"
-                    android:id="@+id/event_item_LBL_time_of_day"
-                    />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/event_item_LBL_time_of_day"
+                    android:layout_height="24dp"
                     android:autoSizeMinTextSize="14sp"
                     android:autoSizeMaxTextSize="24sp"
+                    android:autoSizeTextType="uniform"
                     android:gravity="start"
                     android:text="@string/example_registration_status"
-                    android:layout_marginStart="15dp"
-                    android:padding="4dp"
                     android:id="@+id/event_item_LBL_register_status"
-                    />
-
-
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:textSize="13sp"
-                    android:text="@string/event_card_more_info"
-                    android:autoSizeMinTextSize="12sp"
-                    android:autoSizeTextType="uniform"
-                    android:autoSizeMaxTextSize="15sp"
-                    android:gravity="start|bottom"
-                    android:layout_marginTop="15dp"
-                    android:id="@+id/event_item_BTN_toggle_info"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:visibility="visible"
-                    android:layout_below="@id/event_item_LBL_register_status"
                     />
 
                 <TextView
@@ -113,63 +201,21 @@
                     android:textSize="16sp"
                     android:text="@string/example_event_description"
                     android:autoSizeMinTextSize="12sp"
-                    android:autoSizeTextType="uniform"
-                    android:padding="4dp"
-                    android:gravity="start|bottom"
+                    android:layout_marginTop="8dp"
                     android:id="@+id/event_item_LBL_description"
-                    android:visibility="gone"
-                    android:layout_below="@id/event_item_BTN_toggle_info"
-                    />
-
-
-            </RelativeLayout>
-
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.35"
-                >
-                
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_margin="18dp"
-                    android:layout_height="0dp"
-                    app:layout_constraintDimensionRatio="1:1"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:id="@+id/event_item_IMG_image"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_add_24"
-                    />
-
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/event_item_IMG_image"
-                    app:icon="@drawable/ic_points_wheel"
-                    app:iconSize="23dp"
-                    app:iconPadding="5dp"
-                    app:iconGravity="textStart"
-                    android:lines="1"
-                    android:id="@+id/event_item_BTN_register"
-                    android:textSize="12sp"
-                    android:autoSizeMaxTextSize="14sp"
-                    android:autoSizeMinTextSize="10sp"
                     android:autoSizeTextType="uniform"
-                    app:iconTintMode="multiply"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    app:cornerRadius="20dp"
-                    app:iconTint="@android:color/white"
-                    android:text="@string/number_00"
-
+                    android:gravity="start"
                     />
 
 
+            </LinearLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
     </androidx.cardview.widget.CardView>
